--- a/GroceryFinderFrontEnd/css/styles.css
+++ b/GroceryFinderFrontEnd/css/styles.css
@@ -1,5 +1,6 @@
 h1 {
   margin-top: 1rem;
+  text-align: center;
 }
 
 .store {
@@ -22,4 +23,19 @@ input {
 
 #searchButton {
   margin-bottom: 5px;
+}
+
+a.btn {
+  color: white;
+}
+
+button.btn-warning {
+  color: white;
+  margin-right: 1rem;
+}
+
+.card-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
